[package]
name = "ia-sandbox"
version = "0.1.0"
authors = ["Adrian Budau <budau.adi@gmail.com>"]

[dependencies]
libc = "0.2"
failure = "0.1.1"
clap = "2.26"
serde = "1.0"
serde_derive = "1.0"
bincode = "0.9"
clippy = {version = "0.0.*", optional = true}
simple-signal = "1.1.0"

[dev-dependencies]
tempdir = "0.3"

[features]
default = []
