[package]
name = "ia-sandbox"
version = "0.1.0"
authors = ["Adrian Budau <budau.adi@gmail.com>"]

[dependencies]
libc = "0.2"
failure = "0.1.1"
clap = "2.31"
serde = "1.0"
serde_derive = "1.0"
bincode = "1.0"
clippy = {version = "0.0.*", optional = true}

[dev-dependencies]
tempdir = "0.3"

[features]
default = []
integration-test = []

[[bin]]
name = "ia-sandbox"
path = "src/main.rs"

[[bin]]
required-features = ["integration-test"]
name = "allocate_20_megabytes"
path = "test-fixtures/allocate_20_megabytes.rs"

[[bin]]
required-features = ["integration-test"]
name = "exit_with_input"
path = "test-fixtures/exit_with_input.rs"

[[bin]]
required-features = ["integration-test"]
name = "exit_with_last_argument"
path = "test-fixtures/exit_with_last_argument.rs"

[[bin]]
required-features = ["integration-test"]
name = "hello_world"
path = "test-fixtures/hello_world.rs"

[[bin]]
required-features = ["integration-test"]
name = "kill_with_signal_arg"
path = "test-fixtures/kill_with_signal_arg.rs"

[[bin]]
required-features = ["integration-test"]
name = "loop_500_ms"
path = "test-fixtures/loop_500_ms.rs"

[[bin]]
required-features = ["integration-test"]
name = "sleep_2_seconds"
path = "test-fixtures/sleep_2_seconds.rs"

[[bin]]
required-features = ["integration-test"]
name = "threads_allocate_20_megabytes"
path = "test-fixtures/threads_allocate_20_megabytes.rs"

[[bin]]
required-features = ["integration-test"]
name = "threads_loop_500_ms"
path = "test-fixtures/threads_loop_500_ms.rs"
